had to fix alignemnt of footer links on mobile.

--- a/styles.css
+++ b/styles.css
@@ -1008,6 +1008,7 @@ footer h5{
     display: flex;
     justify-content: space-around;
     width: 100%;
+    background-color: blue;
     
     
    
@@ -1018,6 +1019,7 @@ footer h5{
     flex-direction: column;
     align-items: center;
     width: 250px;
+    
 }
 
 .link-bg > a{
@@ -1067,6 +1069,7 @@ footer h5{
     }
     .footer-links{
         flex-direction: column;
+        align-items: center;
         
     }
     .link-bg p{
